# nnunet_worker_slurm

./: .env.b40x4  .env.b40x4-2  .env.b40x4-long  .env.example  .env.h200x4  .env.h200x8  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  start_worker_b40x4-2.sh  start_worker_b40x4-long.sh  start_worker_b40x4.sh  start_worker_h200x4.sh  start_worker_h200x8.sh  stop_worker_b40x4-long.sh  stop_worker_b40x4.sh
app/: config.py  dashboard_client.py  notifier.py  slurm.py  trainer.py  worker.py
